--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,81 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  height: 52px;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  background: white;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.navbar__logo{
+  color: darkblue;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 0 18px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.navbar__list{
+  padding: 0 18px;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.navbar__list--item{
+  cursor: pointer;
+}
+
+.navbar__list--item:hover{
+  color: darkgray;
+}
+
+.navbar__button{
+  display: none;
+}
+
+.layout{
+  padding-top: 52px;
+}
+
+@media only screen and (max-width: 600px){
+  .navbar__list{
+    display: none;
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  .navbar__button{
+    display: block;
+    padding: 0 18px;
+    cursor: pointer;
+  }
+
+  .navbar--mobile{
+    position: fixed;
+    width: 100%;
+    top: 52px;
+    background: darkblue;
+    color: white;
+    height: 100%;
+  }
+
+  .navbar__list--mobile{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: start;
+    padding: 24px 18px;
+  }
+
+  .navbar__list--item--mobile{
+    cursor: pointer;
+  }
+  
+  .navbar__list--item--mobile:hover{
+    color: darkgray;
+  }
 }
