--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,81 +1,55 @@
 @import "tailwindcss";
 
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  height: 52px;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  background: white;
+.navbar {
+  @apply flex justify-between items-center fixed w-full h-[52px] top-0 shadow-sm bg-white;
 }
 
-.navbar__logo{
-  color: darkblue;
-  font-size: 18px;
-  font-weight: 600;
-  cursor: pointer;
-  padding: 0 18px;
+.navbar__logo {
+  @apply text-blue-800 text-lg font-semibold cursor-pointer px-[18px] py-0;
 }
 
-.navbar__list{
-  padding: 0 18px;
-  display: flex;
-  gap: 12px;
-  align-items: center;
+.navbar__list {
+  @apply py-0 px-[18px] flex gap-3 items-center;
 }
 
-.navbar__list--item{
-  cursor: pointer;
+.navbar__list--item {
+  @apply cursor-pointer;
 }
 
-.navbar__list--item:hover{
-  color: darkgray;
+.navbar__list--item :hover {
+  @apply text-gray-600;
 }
 
-.navbar__button{
-  display: none;
+.navbar__button {
+  @apply hidden cursor-pointer;
 }
 
-.layout{
-  padding-top: 52px;
+.layout {
+  @apply pt-[52px];
 }
 
-@media only screen and (max-width: 600px){
-  .navbar__list{
-    display: none;
+@media only screen and (max-width: 600px) {
+  .navbar__list {
+    @apply hidden;
   }
 
-  .navbar__button{
-    display: block;
-    padding: 0 18px;
-    cursor: pointer;
+  .navbar__button {
+    @apply block py-0 px-[18px];
   }
 
-  .navbar--mobile{
-    position: fixed;
-    width: 100%;
-    top: 52px;
-    background: darkblue;
-    color: white;
-    height: 100%;
+  .navbar--mobile {
+    @apply fixed w-full text-white h-screen top-[52px] bg-blue-800;
   }
 
-  .navbar__list--mobile{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: start;
-    padding: 24px 18px;
+  .navbar__list--mobile {
+    @apply flex flex-col gap-4 py-6 px-[18px];
   }
 
-  .navbar__list--item--mobile{
-    cursor: pointer;
+  .navbar__list--item--mobile {
+    @apply cursor-pointer;
   }
-  
-  .navbar__list--item--mobile:hover{
-    color: darkgray;
+
+  .navbar__list--item--mobile:hover {
+    @apply text-gray-600;
   }
 }
