fix: 모바일 버전에서 넵바 내 로그아웃 버튼 텍스트 왼쪽 정렬 및 라우터 이동 시 메뉴 닫히도록 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,7 @@
   }
 
   .navbar__list--item--mobile {
-    @apply cursor-pointer;
+    @apply cursor-pointer text-left;
   }
 
   .navbar__list--item--mobile:hover {
